--- a/client/tsconfig.vue-tsc.json
+++ b/client/tsconfig.vue-tsc.json
@@ -1,6 +1,11 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": ".",
+    "paths": {
+      "@common": ["src/common"],
+      "@common/*": ["src/common/*"]
+    }
   }
 }
